Fix admin page size issue
There was consistent extra vertical space, triggering a scrollbar, from the body taking up 100% height *plus* padding. Now, it doesn't!

--- a/styles/admin.css
+++ b/styles/admin.css
@@ -6,7 +6,9 @@ body {
 body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  box-sizing: border-box;
   padding: 2em;
+  margin: 0;
   text-align: center;
   display: flex;
   flex-direction: column;
